# grpc-simple

./: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
myapp/: calculator.proto  calculator_pb2.py  calculator_pb2_grpc.py  client.py  server.py
